// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render PlaylistSummary with mutiple playlist  1`] = `
<div>
  <p
    className="page-header__summary"
  >
    บทสวดมนต์ 
    <span>
      27
    </span>
     บท, เวลา 
    <span>
      570:50
    </span>
     นาที
  </p>
</div>
`;

exports[`should render PlaylistSummary with one playlist 1`] = `
<div>
  <p
    className="page-header__summary"
  >
    บทสวดมนต์ 
    <span>
      1
    </span>
     บท, เวลา 
    <span>
      3:20
    </span>
     นาที
  </p>
</div>
`;
